# hf_tokenizer_ffi

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: build-sdk.yml
include/: hf_tokenizer.hpp  hf_tokenizer_c.h
scripts/: build_sdk_aarch64.sh  build_sdk_windows_mingw64.sh  build_sdk_x86_64.sh  install_rust.sh  setup_arm_toolchain.sh
src/: chat_template.rs  lib.rs
