[package]
name = "hf_tokenizer_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]   # 也可以换成 ["cdylib"] 产出 .so

[dependencies]
tokenizers = "0.22"
libc = "0.2"
minijinja = { version = "2", features = ["serde", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"